[tool.poetry]
name = "sanipro"
version = "0.1.0"
description = "Sanitizes prompts."
authors = ["Yokkin"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
typing-extensions = "^4.12.2"
networkx = "^3.4.2"

[tool.poetry.scripts]
sanipro = "sanipro.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
